--- a/angular2-client/src/app/journals-page/page-display/add-bullet/add-bullet.component.css
+++ b/angular2-client/src/app/journals-page/page-display/add-bullet/add-bullet.component.css
@@ -1,6 +1,7 @@
 :host .form-inline {
 	max-width: 750px;
 	margin: 10px 0;
+	overflow: hidden;
 }
 
 :host #isStarred,
